--- a/Lab5_dmytrenko/style2.css
+++ b/Lab5_dmytrenko/style2.css
@@ -25,16 +25,16 @@ body {
     border-radius: 10px;
     border: 4px solid plum
 }
-iframe {
-    width: 250px;
-    min-height: 100px;
-    border: none;
-    display: flex;
-    justify-content: center;
-    margin-left: 840px;
-    font-size: 100px;
-  }
   p {
       font-size: 40px;
       text-align: center;
+      color: yellow
+  }
+  .active img {
+    display: flex;
+    border: 2px solid plum;
+    width: 350px;
+  }
+  .active h3 {
+    color: powderblue;
   }
